<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >

    <TextView
        android:id="@+id/exittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/sendtesttv"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/yes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/exittext"
        android:layout_below="@+id/exittext"
        android:layout_marginTop="34dp"
        android:textSize="20sp"
        android:text="@string/sendtestyes" />

    <Button
        android:id="@+id/no"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yes"
        android:layout_alignBottom="@+id/yes"
        android:layout_alignRight="@+id/exittext"
        android:textSize="20sp"
        android:text="@string/sendtestno" />

</RelativeLayout>